@@ -1,3 +1,14 @@
+2010-01-25  Steve Falkenburg  <sfalken@apple.com>
+
+        Reviewed by Simon Fraser.
+
+        A WebGeolocationControllerClient is leaked for every WebView
+        https://bugs.webkit.org/show_bug.cgi?id=34145
+
+        * page/GeolocationController.cpp:
+        (WebCore::GeolocationController::~GeolocationController):
+        * page/GeolocationControllerClient.h:
+
 2010-01-25  Chris Marrin  <cmarrin@apple.com>
 
         Reviewed by Simon Fraser.
